# DNS-Server

./: .flake8  .gitignore  Client.cs  DNS_Client.sln  Program.cs  README.md  UDP.cs  dns.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: dnsclient.yml
config/: config.py  di.py
dns_client/: Client.py  UDP.py  dns_utils.py  utils.py
dnsclient/: abstract.py  client.py  query.py  udp.py
gui/: DNSWidget.py  Window.py
tests/: test_cli.py  test_client.py  test_mock.py  test_query.py  test_udp.py
utils/: cli.py  entities.py
