[tool.poetry]
name = "dns-client"
version = "1.0.0"
description = "This is a DNS Client with cli and gui interfaces"
authors = ["MatveyIvanov <cool.matvey250301@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bitstring = "3.1.9"
dependency-injector = "4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
