[tool.poetry]
name = "dnsclient"
version = "1.0.0"
description = "This is a DNS Client with cli and gui interfaces"
authors = ["MatveyIvanov <cool.matvey250301@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bitstring = "3.1.9"
dependency-injector = "4.41.0"
pytest = "8.1.1"
pytest-cov = "5.0.0"
flake8 = "7.0.0"
mypy = "1.9.0"
pytest-mock = "3.14.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--show-capture=no"

[tool.coverage.run]
include = [
]

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
omit = [
    "tests/*",
    "config/*",
    "utils/entities.py",
    "utils/test.py",
]
ignore_errors = true

[tool.mypy]
python_version = "3.11"
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
